--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
             "Estamos em mundo coletivo, mas você é <i>único!</i>"
         </p>
         </div>
-
         </header>
+        <div class="cx-texto">
+            <p class="orientacao">"Você está na largura de <b>Desktop</b>Pressione F12 para abrir a ferramento de desenvolvedor.</p>
+            <p class="orientacao">"Agora diminua a largura ao lado do ícone || puxando para a esquerda.</p>
+            <p class="orientacao2">"Você está na largura de <b>Tablet</b>Diminua mais!!.</p>
+            <p class="orientacao3">"Agora sim !esse é Mobile First do seu projeto!.</p>
+            <p class="orientacao3">"Gostou?! Vamos fazer esse projeto então!.</p>
+        </div>
 </body>
 </html>
