--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <body>
         <header class="cabecalho">
         <d1v class="container">
-        <img src="apartamento-coloridos-número-isolado-desenho_csp46346390.jpg" alt="Logo ONE" class="container__imagem">
-        <h1 class="container__titulo">Plataforma<b>ONE</b></h1>
-        <p class="container__frase">
-            "Estamos em mundo coletivo, mas você é <i>único!</i>"
-        </p>
+            <img src="img/privd.jpg"alt="Logo ONE" class="container__imagem">
+             <h1 class="container__titulo">Plataforma<b>ONE</b></h1>
+             <p class="container__frase">
+                "Estamos em mundo coletivo, mas você é <i>único!</i>"
+            </p>
         </div>
         </header>
         <div class="cx-texto">
